# django-logbasecommand

./: .gitignore  Makefile  README.md  setup.cfg
.github/workflows/: test.yml
logbasecommand/: base.py
testapp/testapp/: settings.py
testapp/testapp/management/commands/: some_command.py
testapp/tests/: test_command.py
