[metadata]
name = django-logbasecommand
version = attr: logbasecommand.__version__
description = Minimal package to add logging helpers to Django management commands
author = PPB - InfoSec Engineering
author_email = surface@paddypowerbetfair.com
url = https://github.com/surface-security/django-logbasecommand/
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Environment :: Web Environment
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Django >= 3.0, < 4

python_requires = >=3.6

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
source = logbasecommand

[coverage:report]
show_missing = True
skip_covered = True
